# docs/swagger.yaml
@@ -104,6 +104,8 @@ paths:
           schema:
             $ref: '#/definitions/main.ListRevokedCertsResponse'
       summary: List all revoked certificates
+      tags:
+      - RevokedCertListAction
   /v1/removeresponder:
     post:
       consumes:
@@ -144,6 +146,8 @@ paths:
           schema:
             type: string
       summary: Remove a revoked certificate from the list
+      tags:
+      - RevokedCertListAction
   /v1/uploadsignedcert:
     post:
       consumes:
